<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DepositScreen">

    <TextView
            android:text="@string/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textColor="#000000" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/depositmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:textColor="#000000" android:textAlignment="center"/>
    <RadioGroup
            android:layout_width="98dp"
            android:layout_height="108dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="106dp" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checking_button"
        />
        <RadioButton
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/savings_button"
                android:minHeight="48dp"/>
    </RadioGroup>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/balance_change"
            android:textColor="#000000" android:textAlignment="center"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/amount"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/amount"
            android:textColor="#000000" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="116dp" android:textAlignment="center"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/confirm_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="107dp"
            android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/balance_change"/>
</androidx.constraintlayout.widget.ConstraintLayout>