<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WithdrawActivity">

    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/confirm_button2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/change_1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/change_1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="41dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/withdrawmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textColor="#000000" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="75dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="67dp"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="123dp" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/zHelp"/>
    <RadioGroup
            android:layout_width="140dp"
            android:layout_height="114dp"
            android:id="@+id/zHelp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp">
        <RadioButton
                android:text="@string/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/check_button"
        />
        <RadioButton
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/save_button"
        />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>