<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TransferScreen">

    <RadioGroup
            android:layout_width="214dp"
            android:layout_height="101dp"
            android:id="@+id/from_radio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="77dp">
        <RadioButton
                android:text="@string/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/FromCheck"
        />
        <RadioButton
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/FromSave"
                android:minHeight="48dp"/>
    </RadioGroup>
    <TextView
            android:text="@string/transferto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:textColor="#000000" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/from_radio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"/>
    <RadioGroup
            android:layout_width="166dp"
            android:layout_height="99dp"
            android:id="@+id/to_radio" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp">
        <RadioButton
                android:text="@string/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ToCheck"
        />
        <RadioButton
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ToSave"
        />
    </RadioGroup>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/to_radio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" android:layout_marginTop="5dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Transfernumber"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="23dp" android:textAlignment="center"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/Transfernumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"/>
    <TextView
            android:text="@string/transferfrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:textColor="#000000" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/from_radio"/>
</androidx.constraintlayout.widget.ConstraintLayout>