<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainScreen">

    <TextView
            android:text="@string/avalible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/balance_id"
            android:textColor="#000000" android:layout_marginEnd="235dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="102dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"/>
    <TextView
            android:text="@string/checking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checking_id"
            android:textColor="#000000" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/balance_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            android:layout_marginEnd="235dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/savings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/savings_id"
            android:textColor="#000000" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/checking_id" android:layout_marginEnd="235dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="69dp"/>
    <TextView
            android:text="@string/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/balance_id"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="102dp" android:textColor="#000000"
            android:layout_marginStart="4dp"/>
    <TextView
            android:text="@string/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textColor="#000000" android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/checking_id" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textColor="#000000" android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/savings_id" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <Button
            android:text="@string/deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/deposit_id"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/savings_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="77dp"/>
    <Button
            android:text="@string/transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/transfer_id"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/deposit_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="77dp"/>
    <Button
            android:text="@string/withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/withdraw_id"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/transfer_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="77dp"/>
    <TextView
            android:text="1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/balance"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="102dp" android:layout_marginStart="7dp"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:textColor="#000000"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checking"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/balance" android:layout_marginStart="7dp"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:textColor="#000000"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/savings"
            android:textColor="#000000" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/checking" android:layout_marginStart="7dp"
            app:layout_constraintStart_toEndOf="@+id/textView7"/>
</androidx.constraintlayout.widget.ConstraintLayout>