<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_enter"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toEndOf="@+id/username_id"
            android:minHeight="48dp" android:textColor="#000000"/>
    <TextView
            android:layout_width="101dp"
            android:layout_height="43dp" android:id="@+id/username_id"
            android:textSize="18sp" android:text="@string/username"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintEnd_toStartOf="@+id/username_enter" android:textColor="#000000"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/username_enter"
            android:minHeight="48dp" android:textColor="#000000"/>
    <TextView
            android:text="@string/password"
            android:layout_width="100dp"
            android:layout_height="47dp" android:id="@+id/textView2"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/username_id"
            android:textColor="#000000"/>
    <Button
            android:text="@string/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signin_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="152dp"
            android:layout_marginEnd="165dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="144dp" app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>